--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p id="name"><strong>Full Name:  </strong>  <label>Nwafor Emmanuel Chukwudubem</label></p>
                 <p id="name"><strong>Phone:  </strong>      <label>+234 80 662 95128</label></p>
                 <p id="name"><strong>Email:  </strong>      <label>55emmachi@gmail.com</label></p>
-                <p id="name"><strong>Website:  </strong>   <label>Nuelsite.com</label></p>
+                <p id="name"><strong>Website:  </strong>   <label><a href="#">Nuelsite.com</a></label></p>
                 <p id="name"><strong>Address:  </strong>  <label>10 umunwakum street Achara layout Enugu</label></p>
             </div>
             <div id="text2">
