--- a/index.html
+++ b/index.html
@@ -63,6 +63,39 @@
     <section>
         <h2 class="header2">My Resume</h2>
         <h5 class="subhead">WORK EXPERIENCE</h5>
+        <div class="headercontainer">
+            <div class="header__card">
+                <h2>Senior Developer</h2>
+            </div>
+
+            <div class="company-item">
+                <div class="company">
+                    <p>company-</p>
+                    <p>company date</p>
+                </div>
+                <div class="circle"></div>
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet vel odit, autem esse vero atque amet minus nesciunt aut doloremque accusantium blanditiis aspernatur facere nulla et aperiam recusandae distinctio nam.
+                <p>
+        </div>
+        
+        <div class="headercontainer2">
+            <div class="header__card">
+                <h2>Junior Developer</h2>
+            </div>
+
+            <div class="company-item2">
+                <div class="company">
+                    <p>company-</p>
+                    <p>company date</p>
+                </div>
+                <div class="circle"></div>
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet vel odit, autem esse vero atque amet minus nesciunt aut doloremque accusantium blanditiis aspernatur facere nulla et aperiam recusandae distinctio nam.
+                <p>
+        </div>
     </section>
 
 </body>
